Fix: engine compiles, sandbox still has some issues

--- a/Sandbox/Makefile
+++ b/Sandbox/Makefile
@@ -1,25 +1,45 @@
 DEVKITPRO ?= /opt/devkitpro
-include $(DEVKITPRO)/3ds_rules
+include $(DEVKITPRO)/devkitARM/3ds_rules
 
 TARGET      := Sandbox
 BUILD       := build
 SOURCES     := Source
 ENGINE_PATH := ../Tiny3d
 
-# We point to ENGINE_PATH so we can do #include "tiny.h"
-INCLUDES    := -I$(SOURCES) -I$(ENGINE_PATH) -I$(LIBCTR)/include
-LIBDIRS     := -L$(ENGINE_PATH) -L$(LIBCTR)/lib
+# DIRECT PATHS - These are standard for dkp-pacman 3ds-dev
+CTR_INC     := $(DEVKITPRO)/libctru/include
+CTR_LIB     := $(DEVKITPRO)/libctru/lib
 
-ARCH        := -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
-CFLAGS      := $(ARCH) -O2 -mword-relocations -Wall $(INCLUDES)
+# Includes: Sandbox source, Engine root, and 3DS hardware headers
+INCLUDES    := -I$(SOURCES) -I$(ENGINE_PATH) -I$(CTR_INC)
+# Libs: Engine folder and 3DS hardware libs folder
+LIBDIRS     := -L$(ENGINE_PATH) -L$(CTR_LIB)
+
+# Use $(ARCH) from 3ds_rules
+CFLAGS      := $(ARCH) -O2 -mword-relocations -Wall $(INCLUDES) -DARM11 -D_3DS
 CXXFLAGS    := $(CFLAGS) -fno-rtti -fno-exceptions
 
+# Order is vital: Engine -> Hardware Lib -> Math Lib
 LIBS        := -ltiny3d -lctru -lm
 
-# Standard devkitPro logic to build the .3dsx
+CPPFILES    := $(wildcard $(SOURCES)/*.cpp)
+OBJS        := $(patsubst $(SOURCES)/%.cpp, $(BUILD)/%.o, $(CPPFILES))
+
+.PHONY: all clean
+
 all: $(BUILD) $(TARGET).3dsx
 
+$(BUILD):
+	@mkdir -p $(BUILD)
+
 $(TARGET).3dsx: $(TARGET).elf
+	@3dsxtool $< $@
 
 $(TARGET).elf: $(OBJS)
-	$(arm-none-eabi-g++) $(ARCH) $(LIBDIRS) $^ $(LIBS) -o $@
+	$(CXX) $(ARCH) $(LIBDIRS) $^ $(LIBS) -o $@
+
+$(BUILD)/%.o: $(SOURCES)/%.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+clean:
+	rm -rf $(BUILD) $(TARGET).3dsx $(TARGET).elf
