--- a/Tiny3d/Makefile
+++ b/Tiny3d/Makefile
@@ -1,30 +1,25 @@
 DEVKITPRO ?= /opt/devkitpro
-# Match devkitPro examples: set ARCH (including float ABI / FPU) before including rules
-ARCH := -march=armv6k -mtune=mpcore -mfloat-abi=hard -mfpu=vfp -mtp=soft
+
+# Set ARCH before including 3ds_rules (required)
+ARCH := -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
+
 include $(DEVKITPRO)/devkitARM/3ds_rules
 
 TARGET      := tiny3d
 BUILD       := build
 SOURCE_DIR  := Source
 
-# Match the 3DS architecture and ABI exactly
-ARCH        := -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
+# Compiler flags
 CFLAGS      := -g -Wall -O2 -mword-relocations $(ARCH) -ffunction-sections
+CXXFLAGS    := $(CFLAGS) -D__3DS__ -fno-rtti -fno-exceptions -std=gnu++14
 
+# Include paths for 3DS development
 INCLUDES    := -I. -I$(SOURCE_DIR) -I$(DEVKITPRO)/libctru/include
-CXXFLAGS    := $(CFLAGS) $(INCLUDES) -D__3DS__ -fno-rtti -fno-exceptions -std=gnu++11
+CXXFLAGS    += $(INCLUDES)
 
+# Source files
 SOURCES     := $(shell find $(SOURCE_DIR) -name '*.cpp')
 OBJS        := $(patsubst $(SOURCE_DIR)/%.cpp, $(BUILD)/%.o, $(SOURCES))
-
-# Added $(LIBCTR) check to prevent -I/include error
-LIBCTR      := $(DEVKITPRO)/libctr
-INCLUDES    := -I. -I$(SOURCE_DIR) -I$(LIBCTR)/include
-
-# Use $(ARCH) provided by 3ds_rules
-# Use $(ARCH) provided by 3ds_rules
-CFLAGS      := $(ARCH) -g -O2 -Wall $(INCLUDES) -D__3DS__
-CXXFLAGS    := $(CFLAGS) -fno-rtti -fno-exceptions
 
 LIBRARY     := lib$(TARGET).a
 
